--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:alpine
     env_file:
-      - ./api/db.env
+      - ./api/.env.db
     volumes:
       - pgdata-complete_tabs:/var/lib/postgresql/data
   api:
@@ -16,7 +16,7 @@ services:
     ports:
       - 3333:3333
     env_file:
-      - ./api/dev.env
+      - ./api/.env.dev
     volumes:
       - /app/node_modules
       - ./api:/app
