--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   test-db:
     image: postgres:alpine
     env_file:
-      - ./api/test/db.test.env
+      - ./api/test/test.env
     ports:
-      - 8888:8888
+      - 8888:5432
   db:
     image: postgres:alpine
     env_file:
