--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "firebase-admin": "^9.4.2",
     "helmet": "^4.2.0",
     "pg": "^8.5.1",
+    "query-string": "^6.13.8",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
     "uuid": "^8.3.2"
