--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "firebase": "^8.2.5",
     "formik": "^2.2.6",
+    "framer-motion": "^3.2.2-rc.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
