--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
 
 script:
   - ./test.sh
+
+after_success:
+  - bash <(curl -s --retry 5 --retry-delay 2 --connect-timeout 2 https://codecov.io/bash)
