--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "start": "parcel ./public/index.html --port 3000 --hmr-port 3001 --no-cache"
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
     "firebase": "^8.2.5",
     "formik": "^2.2.6",
     "framer-motion": "^3.2.2-rc.1",
