--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,24 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.2.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "firebase": "^8.2.5",
     "formik": "^2.2.6",
     "framer-motion": "^3.2.2-rc.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "yup": "^0.32.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.4",
